Исправления сонара